2007-10-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* telnetd/icmds.c: Add header to file.

2007-10-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libcsupport/src/assoc.c: Removed.  Accidentally included routine
	also in another file.  Mistake after splitting.
	* libcsupport/Makefile.am: Reflect file removal.

2007-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/netdb.h, libnetworking/libc/gethostnamadr.c,
	libnetworking/libc/getnetnamadr.c: Adjust to POSIX.
	Minor updates from FreeBSD.

2007-10-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/include/rtems/score/copyrt.h: Update year.

2007-10-11	Daniel Hellstrom <daniel@gaisler.com>

	* libi2c/libi2c.c, libi2c/libi2c.h: Add message about needing IMFS.
	Fixed check of status when registering driver. Add use of strerror().

2007-10-04	Keith Robertson <kjrobert@alumni.uwaterloo.ca>,
	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/ifaddrs.h, libnetworking/libc/getifaddrs.c,
	libnetworking/libc/if_indextoname.c,
	libnetworking/libc/if_nameindex.c: New (from FreeBSD)
	* Makefile.am: Add files above.
	* libnetworking/net/if.h: Add if_nameindex (from FreeBSD).

2007-09-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/stackchk/check.c: Eliminate output with little information.
	Always print a blown message using the same routine. Now works with
	GNAT RTS -fstack-checking if you have patch for the RTEMS specific
	support in your GCC version.

2007-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/src/semaphorecreatesupp.c: Fixed warning.

2007-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/dumpbuf/dumpbuf.c: Use printk.

2007-09-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/net/ppp_defs.h: Include rtems/stdint.h.
	Use uint32_t for ext_accm.

2007-09-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* pppd/auth.c, pppd/demand.c, pppd/ipcp.c, pppd/ipcp.h,
	pppd/lcp.c, pppd/lcp.h, pppd/magic.c, pppd/magic.h, pppd/options.c,